--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -44,6 +44,7 @@
 
 
 
+
   <!-- <link rel="stylesheet" href="/css/editortextarea.css">
   <link href="https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css" rel="stylesheet"
     type="text/css" />
@@ -65,6 +66,10 @@
     <!-- Import prismjs style in <head>... -->
 <!-- Import highlight plugin style in <head>... -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/highlight/ui/trumbowyg.highlight.min.css">
+<!-- Import Trumbowyg MathML style in <head>... -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/mathml/ui/trumbowyg.mathml.min.css">
+<!-- Import Trumbowyg colors style in <head>... -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/colors/ui/trumbowyg.colors.min.css">
 
 
   <!-- https://fonts.google.com/ -->
@@ -135,20 +140,27 @@
 <script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script>
 
 
-<script src="trumbowyg/dist/plugins/fontsize/trumbowyg.fontsize.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/trumbowyg.min.js"></script>
     
 <!-- Import prismjs and Trumbowyg highlight at the end of <body>... -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-highlight/prism-line-highlight.min.js"></script>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/trumbowyg.min.js"></script>
-  </script>
   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/highlight/trumbowyg.highlight.min.js"></script>
+<!-- Import Trumbowyg MathJax at the end of <body>... -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<!-- Import Trumbowyg MathML plugin at the end of <body>... -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/mathml/trumbowyg.mathml.min.jss"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/fontsize/trumbowyg.fontsize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/colors/trumbowyg.colors.min.js"></script>
 
   <script src='https://www.paypalobjects.com/js/external/api.js'></script>
+
+
 
 </body>
 
