--- a/src/views/partials/see-own-question-adisabled.hbs
+++ b/src/views/partials/see-own-question-adisabled.hbs
@@ -82,11 +82,11 @@
             <div class="profile-question-info profile-allquestions-likes">
               <i class="fas fa-thumbs-up"></i>
               {{countLength userallInfo.user_answers}} Questions answered
-            </div>
+            </div><!--
             <div class="button-see-answer2">
               <a href="/questions/enable_answers/{{question.id}}"> <button class="button-see-answer2"> See all Answers
                 </button></a>
-            </div>
+            </div> -->
           </div>
         </div>
 
