--- a/src/views/questions/own-questions.hbs
+++ b/src/views/questions/own-questions.hbs
@@ -23,7 +23,7 @@
 
           </div>
           <div class="row col-md-12 note-filter">
-            Press "Enter" to tag(s)
+            Press "Enter" to add tag(s)
           </div>
 
           <div class="tags-added-container" contenteditable="false">
