--- a/src/public/css/personal.css
+++ b/src/public/css/personal.css
@@ -431,11 +431,15 @@
         margin-right: 15px;
     }
     .tm-search-form {
-        justify-content: flex-start;
+        justify-content: flex-end;
     }
 }
 
 .search {
+    display: flex;
+    margin-top: 1.1rem;
+}
+.search-button {
     display: flex;
     margin-top: 1.5rem;
 }
@@ -561,4 +565,8 @@ margin-left: 1rem;
 .note-filter{
     color: #6f6f6f;
     padding-left: 25px !important;
+}
+
+.width100{
+    width: 100%;
 }
