--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -74,7 +74,16 @@
 
   <!-- https://fonts.google.com/ -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-215892281-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-215892281-1');
+</script>
 
 </head>
 
@@ -159,6 +168,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/colors/trumbowyg.colors.min.js"></script>
 
   <script src='https://www.paypalobjects.com/js/external/api.js'></script>
+
+
 
 
 
