--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -16,9 +16,7 @@
                 <div class="col-md-10 offset-md-2">
                   <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
                   <h1 class="h1-title-index">
-                    Do you need a quick answer?</h1>
-                  <h1 class="h1-title-index">
-                    Get it!</h1>
+                    Get expert answers to any question!</h1>
                   <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
