--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -75,14 +75,14 @@
   <!-- https://fonts.google.com/ -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-215892281-1">
-</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KL61YWC3DV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-215892281-1');
+  gtag('config', 'G-KL61YWC3DV');
 </script>
 
 </head>
