--- a/src/views/paypal/new-customer.hbs
+++ b/src/views/paypal/new-customer.hbs
@@ -21,7 +21,7 @@
                   <h1 class="h1-title-index">
                   </h1>
                   <p class="subtitle-index">By adding your payment method, we can transfer the money to you when you are
-                    chosen the best answer.</p>
+                    chosen as "best answer".</p>
                   <div class="mt-3">
                        <span id='lippButton'></span>
                  </div>
@@ -61,15 +61,15 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
         <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-        <h4 class="title"><a href="">Stripe, the safest method</a></h4>
-        <p class="description">We do the registration through the Stripe tool, it is the safest method for us to enable
+        <h4 class="title"><a href="">PAYPAL, the safest method</a></h4>
+        <p class="description">We do the registration through the Paypal tool, it is the safest method for us to enable
           your payment method.</p>
       </div>
       <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
         <div class="icon"><i class="ion-ios-paper-outline"></i></div>
         <h4 class="title"><a href="">Few steps</a></h4>
         <p class="description">
-          Through stripe, in a few steps you will already be registered and you will be able to answer the questions and
+          Through Paypal, in a few steps you will already be registered and you will be able to answer the questions and
           earn your rewards.</p>
       </div>
       <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
