--- a/src/views/emailtemplates/tagsnewquestions/html.hbs
+++ b/src/views/emailtemplates/tagsnewquestions/html.hbs
@@ -54,9 +54,8 @@
                                       </tr>
                                       <tr>
                                         <td style="padding: 2rem;">
-                                          You have received a request to reset your password for
-                                          your account. If you have not requested to reset your password, please
-                                          ignore this email.<br><br><a href="{{link}}"
+                                          New questions have been published with the tags that interest you. Go and be
+                                          the best answer!<br><br><a href="https://www.priceanswers.com"
                                             style="font-size:14px;font-weight:bold;color:white;border:1px solid #21aa13;background: #46a1da;padding:5px 10px;padding: 0.8rem;">Modify
                                             Password</a><br><br>
                                         </td>
