--- a/src/public/css/personal.css
+++ b/src/public/css/personal.css
@@ -486,9 +486,16 @@
     .card-body-signup {
         padding: 3rem !important
     }
+    .answer-aq{
+      border-right: 1px solid white;
+    }
 }
 
 @media (max-width: 767px) {
+    .answer-aq{
+        border-bottom: 1px solid white;
+        margin-bottom: 1rem;
+      }
     .button-main-3 {
         width: auto;
         height: 50px;
@@ -569,4 +576,34 @@ margin-left: 1rem;
 
 .width100{
     width: 100%;
+}
+
+.modal-1 {
+    background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.3)), url(../img/call-to-action-bg.jpg) fixed center center;
+    background-size: cover;
+    padding: 60px 0;
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+    text-align: center;
+  }
+
+  .modal-1 img{
+      width: 20rem;
+ 
+  }
+
+  .footer-modal-aq{
+      border-top: unset !important;
+  }
+.margin-top-1{
+    margin-top: 1rem;
+}
+
+.h5-modal-aq{
+    margin-top: 1rem;
+    color: white;
+    font-size: 1.1rem;
+}
+.button-modal-aq{
+    margin: 15px 0 20px 0 !important;
 }
