--- a/src/views/users/myprofile.hbs
+++ b/src/views/users/myprofile.hbs
@@ -5,7 +5,10 @@
       <h2 class="u-heading-font u-text u-text-2">MY PROFILE</h2>
       <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
     </div>
-    <br>
+    <br />
+    {{#ifNotExist user.tags_to_answer}}
+     {{> add-tags-modal}}
+    {{/ifNotExist}}
     <div class="tm-main row justify-content-md-center margin-x-0">
       <fieldset class="fieldset-question col-md-8">
         <legend class="legend-question">Profile Details</legend>
@@ -14,32 +17,54 @@
             <div class="mt-3">
               <label for="title">Name</label>
               <input type="text" id="title" name="name" class="form-control" placeholder="Name" value="{{user.name}}"
-                autofocus>
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                autofocus />
+              <small id="emailHelp" class="form-text text-muted">We'll never
+                share your email with anyone else.</small>
             </div>
             <div class="mt-3">
               <label for="title">Country of birth</label>
-              <select type="text" id="country_birth" name="country_birth" class="form-control custom-select custom-select">
-                <option  value="{{user.country_birth}}" selected>{{user.country_birth}} </option>
+              <select type="text" id="country_birth" name="country_birth"
+                class="form-control custom-select custom-select">
+                <option value="{{user.country_birth}}" selected>{{user.country_birth}} </option>
                 {{#each countriesList}}
-                  <option value="{{this.name}}">{{this.name}}</option>
+                <option value="{{this.name}}">{{this.name}}</option>
                 {{/each}}
-                </select>
+              </select>
 
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <small id="emailHelp" class="form-text text-muted">We'll never
+                share your email with anyone else.</small>
             </div>
             <div class="mt-3">
               <label for="title">Write a one-line description about yourself.</label>
               <input type="text" id="short_describe" name="short_describe" class="form-control"
-                placeholder="example: math expert" value="{{user.short_describe}}" autofocus>
-              <small id="emailHelp" class="form-text text-muted">Write a one-line description about yourself.</small>
+                placeholder="example: math expert" value="{{user.short_describe}}" autofocus />
+              <small id="emailHelp" class="form-text text-muted">Write a
+                one-line description about yourself.</small>
             </div>
             <div class="mt-3">
               <label for="title">Experience and knowledge</label>
               <input type="text" id="experience_describe" name="experience_describe" class="form-control"
-                placeholder="Experience" value="{{user.experience_describe}}" autofocus>
-              <small id="emailHelp" class="form-text text-muted">Describe your experience and knowledge</small>
+                placeholder="Experience" value="{{user.experience_describe}}" autofocus />
+              <small id="emailHelp" class="form-text text-muted">Describe your
+                experience and knowledge</small>
             </div>
+            <div class="mt-3">
+              <label for="tags-id">Tags that you are interested in answering (press "Enter" to add the tag)</label>
+              <div class="container-tag2">
+                <div class="div"><input class="tag-input" id="tags-id" type="text" /></div>
+                <div class="tags-added-container" contenteditable="false">
+                  {{#each user.tags_to_answer}}
+                  <span href="#" class="tag-added">{{this}}
+                    <i class="fas fa-times cross"></i>
+                    <input type="text" value="{{this}}" class="tag-hidden" name="tagsArray" />
+                  </span>
+                  {{/each}}
+                </div>
+              </div>
+            </div>
+            <small id="emailHelp" class="form-text text-muted">We will notify
+              you by mail when a question is posted with the following tags
+              (press "Enter" to add the tag)</small>
             <div class="mt-3">
               <label for="button">Change Password:</label>
               <a href="/users/newpassword"><button type="button" id="" class="button-main-2">New Password</button></a>
@@ -47,14 +72,14 @@
             {{#if user.admin}}
             <div class="mt-3">
               <label for="button">Dashboard transfer</label>
-              <a href="/admin/dashboard-transfer"><button type="button" id="" class="button-main-2">Dashboard transfer</button></a>
+              <a href="/admin/dashboard-transfer"><button type="button" id="" class="button-main-2">Dashboard
+                  transfer</button></a>
             </div>
             {{/if}}
 
             <div class="mt-3 container-button">
               <button class="button-main-1 mt-5" type="submit"> Save </button>
             </div>
-
 
           </form>
         </div>
