--- a/src/views/partials/answer-or-question-modal.hbs
+++ b/src/views/partials/answer-or-question-modal.hbs
@@ -14,7 +14,7 @@
           <div class="img">
             <img src="../img/back2.jpg" alt="" class="img-fluid">
           </div>
-          <h5 class="h5-modal-aq"> Do you need expert answers your question?</h5>
+          <h5 class="h5-modal-aq"> Do you need expert answers to your question?</h5>
           <a href="/users/answerorquestion/question" pa-marked="1">
             <button class="button-main-4 button-modal-aq" pa-marked="1">
               Get answers!
