--- a/src/views/users/myprofile.hbs
+++ b/src/views/users/myprofile.hbs
@@ -6,9 +6,9 @@
       <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
     </div>
     <br />
-    {{#ifNotExist user.tags_to_answer}}
+    {{#ifNotExistandAnswer user.tags_to_answer user.answer_or_question}}
      {{> add-tags-modal}}
-    {{/ifNotExist}}
+    {{/ifNotExistandAnswer}}
     <div class="tm-main row justify-content-md-center margin-x-0">
       <fieldset class="fieldset-question col-md-8">
         <legend class="legend-question">Profile Details</legend>
