--- a/src/views/users/myprofile.hbs
+++ b/src/views/users/myprofile.hbs
@@ -49,9 +49,13 @@
                 experience and knowledge</small>
             </div>
             <div class="mt-3">
-              <label for="tags-id">Tags that you are interested in answering (press "Enter" to add the tag)</label>
+              <label for="tags-id">Tags that you are interested in answering (example: "math", "php", "science")</label>
               <div class="container-tag2">
-                <div class="div"><input class="tag-input" id="tags-id" type="text" /></div>
+                <div class="div ">
+                  <input class="tag-input" id="tags-id" name="tags-id" type="text" />
+                <button type="button" id="" class="btn btn-info button-add-tags "> Add</button>
+                </div>
+
                 <div class="tags-added-container" contenteditable="false">
                   {{#each user.tags_to_answer}}
                   <span href="#" class="tag-added">{{this}}
@@ -64,7 +68,7 @@
             </div>
             <small id="emailHelp" class="form-text text-muted">We will notify
               you by mail when a question is posted with the following tags
-              (press "Enter" to add the tag)</small>
+              </small>
             <div class="mt-3">
               <label for="button">Change Password:</label>
               <a href="/users/newpassword"><button type="button" id="" class="button-main-2">New Password</button></a>
