--- a/src/views/questions/new-question.hbs
+++ b/src/views/questions/new-question.hbs
@@ -31,14 +31,14 @@
               <small id="emailHelp" class="form-text text-muted">Describe your question in detail.</small>
             </div>
             <div class="mt-3">
-              <label for="tags-id">Tags</label>
+              <label for="tags-id">Tags (example: "math", "php", "science")</label>
               <div class="container-tag2">
-                <div class="div"><input class="tag-input" id="tags-id" type="text"></div>
+                <div class="div"><input class="tag-input" id="tags-id" name="tags-id" type="text"></div>
+                <button type="button" id="" class="btn btn-info button-add-tags "> Add</button>
                 <div class="tags-added-container" contenteditable="false"></div>
               </div>
             </div>
-            <small id="emailHelp" class="form-text text-muted">Add your tags so experts can find your questions (press
-              "Enter" to add the tag)</small>
+            <small id="emailHelp" class="form-text text-muted">Add your tags so experts can find your questions </small>
 
 
             <div class="mt-3 reward-container">
