--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PriceAnswers</title>
+  <meta name="description" content="Get answers to any question and just pay what you want">
+  <title>PriceAnswers - Ask an Expert </title>
+  <meta name="keywords" content="ask, expert, money">
   <link rel="icon" href="/img/iconlogoprice.png">
 
 
