--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get answers to any question and just pay what you want">
+  <meta name="description" content="Get answers to any question and just pay what you want, if you are a expert earn money answering">
   <title>PriceAnswers - Ask an Expert </title>
   <meta name="keywords" content="ask, expert, money">
   <link rel="icon" href="/img/iconlogoprice.png">
