--- a/src/views/questions/new-question.hbs
+++ b/src/views/questions/new-question.hbs
@@ -31,10 +31,10 @@
               <small id="emailHelp" class="form-text text-muted">Describe your question in detail.</small>
             </div>
             <div class="mt-3">
-              <label for="tags-id">Tags (example: "math", "php", "science")</label>
+              <label for="tags-id">Tags (for each tag press "Add")</label>
               <div class="container-tag2">
                 <div class="div"><input class="tag-input" id="tags-id" name="tags-id" type="text"></div>
-                <button type="button" id="" class="btn btn-info button-add-tags "> Add</button>
+                <button type="button" id="" class="btn btn-info button-add-tags "> Add Tag</button>
                 <div class="tags-added-container" contenteditable="false"></div>
               </div>
             </div>
