--- a/src/views/users/myprofile.hbs
+++ b/src/views/users/myprofile.hbs
@@ -49,11 +49,11 @@
                 experience and knowledge</small>
             </div>
             <div class="mt-3">
-              <label for="tags-id">Tags that you are interested in answering (example: "math", "php", "science")</label>
+              <label for="tags-id">Tags that you are interested in answering (for each tag press "Add")</label>
               <div class="container-tag2">
                 <div class="div ">
                   <input class="tag-input" id="tags-id" name="tags-id" type="text" />
-                <button type="button" id="" class="btn btn-info button-add-tags "> Add</button>
+                <button type="button" id="" class="btn btn-info button-add-tags "> Add Tag</button>
                 </div>
 
                 <div class="tags-added-container" contenteditable="false">
