--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -16,7 +16,9 @@
                 <div class="col-md-10 offset-md-2">
                   <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
                   <h1 class="h1-title-index">
-                    Get expert answers to any question!</h1>
+                    Do you need quick answers from experts?</h1>
+                  <h1 class="h1-title-index">
+                    Get it!</h1>
                   <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
@@ -29,7 +31,31 @@
             </div>
           </div>
         </div>
-  {{> errors}}
+        {{> errors}}
+
+        <div class="carousel-item">
+          <div class="carousel-background"><img src="img/back1.jpg" alt=""></div>
+          <div class="carousel-container">
+            <div class="carousel-content">
+
+              <div class="row container-title-index">
+                <div class="col-md-10 offset-md-2">
+                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
+                  <h1 class="h1-title-index">
+                    Do you need answers from experts in math, science, computer programming, law, history or any other
+                    type?</h1>
+                  <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
+                  <div class="mt-3">
+                    <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
+                        class="button-main-3">Get Answers</button></a>
+                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signin" {{/if}}><button
+                        class="button-main-4">Earn Money Answering</button></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
         <div class="carousel-item">
@@ -53,30 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <div class="carousel-background"><img src="img/back1.jpg" alt=""></div>
-          <div class="carousel-container">
-            <div class="carousel-content">
 
-              <div class="row container-title-index">
-                <div class="col-md-10 offset-md-2">
-                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
-                  <h1 class="h1-title-index">
-                    Do you need a quick answer?</h1>
-                  <h1 class="h1-title-index">
-                    Get it!</h1>
-                  <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
-                  <div class="mt-3">
-                    <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
-                        class="button-main-3">Get Answers</button></a>
-                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signin" {{/if}}><button
-                        class="button-main-4">Earn Money Answering</button></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
 
       </div>
 
