--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -19,7 +19,7 @@
                     Do you need quick answers from experts?</h1>
                   <h1 class="h1-title-index">
                     Get it!</h1>
-                  <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
+                  <p class="subtitle-index">Get answers from experts in math, science, computer programming, law, history or any other and just pay what you want</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
                         class="button-main-3">Get Answers</button></a>
@@ -42,8 +42,7 @@
                 <div class="col-md-10 offset-md-2">
                   <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
                   <h1 class="h1-title-index">
-                    Do you need answers from experts in math, science, computer programming, law, history or any other
-                    type?</h1>
+                    Ask right now and just pay when you have answers!</h1>
                   <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
@@ -66,7 +65,7 @@
                 <div class="col-md-10 offset-md-2">
                   <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
                   <h1 class="h1-title-index">
-                    Earn money answering!</h1>
+                   You are an expert? Earn money answering!</h1>
                   <p class="subtitle-index">Search by tags what questions you can answer and earn money.</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
