--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,3 +1,10 @@
+
+<head>
+  <meta name="description" content="Get answers from experts in math, science, computer programming, law, history or any other and just pay what you want">
+  <title>PriceAnswers - Get answers to any question </title>
+  <meta name="keywords" content="ask an expert, expert, ask, questions, answers">
+  </head>
+
 <!-- CARROUSEL  INTRO -->
 <section id="intro">
   <div class="intro-container">
