--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,3 +1,4 @@
+
 <div class="row card border-card">
   <div class="banner-question u-section-2">
     <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">USER</h3>
@@ -9,7 +10,7 @@
     <div class="col-md-3 mx-auto">
       <div class="card mt-4 text-center ">
 
-        <img src="/img/logoprice.png" class=" mx-auto display-block m-4 login-logo" alt="">
+        <a href ="/"><img src="/img/logoprice.png" class=" mx-auto display-block m-4 login-logo" alt=""> </a>
         <div class="card-body card-body-signup">
           <form action="/users/signup" method="POST">
             <div class="mt-3">
