--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -11,17 +11,15 @@
       <div class="carousel-inner" role="listbox">
 
         <div class="carousel-item active">
-          <div class="carousel-background"><img src="img/back5.jpg" alt=""></div>
+          <div class="carousel-background"><img src="img/back5.jpg" alt="get fast answers"></div>
           <div class="carousel-container">
             <div class="carousel-content">
 
               <div class="row container-title-index">
                 <div class="col-md-10 offset-md-2">
-                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
+                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='get quick answers from experts' /> </a></h1>
                   <h1 class="h1-title-index">
                     Do you need quick answers from experts?</h1>
-                  <h1 class="h1-title-index">
-                    Get it!</h1>
                   <p class="subtitle-index">Get answers from experts in math, science, computer programming, law, history or any other and just pay what you want</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
@@ -43,9 +41,9 @@
 
               <div class="row container-title-index">
                 <div class="col-md-10 offset-md-2">
-                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
+                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='answers to math, science, law, chemistry' /> </a></h1>
                   <h1 class="h1-title-index">
-                    Ask right now and just pay when you have answers!</h1>
+                    Ask right now and pay just when you have answers!</h1>
                   <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
@@ -66,7 +64,7 @@
             <div class="carousel-content">
               <div class="row container-title-index">
                 <div class="col-md-10 offset-md-2">
-                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
+                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='solve math problems' /> </a></h1>
                   <h1 class="h1-title-index">
                    You are an expert? Earn money answering!</h1>
                   <p class="subtitle-index">Search by tags what questions you can answer and earn money.</p>
