--- a/src/views/layouts/main-index.hbs
+++ b/src/views/layouts/main-index.hbs
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get answers from experts in math, science, computer programming, law, history or any other and just pay what you want">
-  <title>PriceAnswers - Get answers to any question </title>
-  <meta name="keywords" content="ask an expert, expert, ask, questions, answers">
+  <title>Get answers from experts quickly | Solve your questions</title>
+  <meta name="keywords" content="ask an expert, expert, ask, questions, answers, math, law, history">
   <link rel="icon" href="/img/iconlogoprice.png">
   <link rel="shortcut icon" href="/img/iconlogoprice.png">
 
