--- a/src/views/layouts/main-index.hbs
+++ b/src/views/layouts/main-index.hbs
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get answers from experts in math, science, computer programming, law, history or any other and just pay what you want">
-  <title>Get answers from experts quickly | Solve your questions</title>
-  <meta name="keywords" content="ask an expert, expert, ask, questions, answers, math, law, history">
+  <meta name="description" content="Get answers from experts in math, science, computer programming, law, history, or earn money online answering questions, delta math answers">
+  <title>Get Answers from Experts Quickly | Earn Money Online Answering Questions</title>
+  <meta id="meta_keywords" name="keywords" content="earn money answering questions, delta math answers, get math answers, math puzzle with answers, fast expert answers, earn money online">
   <link rel="icon" href="/img/iconlogoprice.png">
   <link rel="shortcut icon" href="/img/iconlogoprice.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="canonical" href="https://www.priceanswers.com">
 
 
 
@@ -78,7 +80,6 @@
 
   <!-- https://fonts.google.com/ -->
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KL61YWC3DV"></script>
 <script>
