--- a/src/views/partials/add-tags-modal.hbs
+++ b/src/views/partials/add-tags-modal.hbs
@@ -13,7 +13,7 @@
         <div class="col-md-12 ">
 
           <h5 class="h5-modal-aq"> 
-We recommend adding tags that interest you so that we notify you when questions with those tags are added</h5>
+            We recommend adding tags that interest you in order to notify you when they ask related questions</h5>
             <button class="button-main-4 button-modal-aq"  data-dismiss="modal">
               Understood!
             </button>
