--- a/src/views/layouts/main-index.hbs
+++ b/src/views/layouts/main-index.hbs
@@ -81,13 +81,15 @@
   <!-- https://fonts.google.com/ -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KL61YWC3DV"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157646688-1">
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KL61YWC3DV');
+  gtag('config', 'UA-157646688-1');
 </script>
 
 </head>
