--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -23,9 +23,9 @@
                     Do you need quick answers from experts?</h1>
                   <p class="subtitle-index">Get answers from experts in math, science, computer programming, law, history or any other and just pay what you want</p>
                   <div class="mt-3">
-                    <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
+                    <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
                         class="button-main-3">Get Answers</button></a>
-                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signin" {{/if}}><button
+                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signup" {{/if}}><button
                         class="button-main-4">Earn Money Answering</button></a>
                   </div>
                 </div>
@@ -47,9 +47,9 @@
                     Ask right now and pay just when you have answers!</h1>
                   <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
                   <div class="mt-3">
-                    <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
+                    <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
                         class="button-main-3">Get Answers</button></a>
-                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signin" {{/if}}><button
+                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signup" {{/if}}><button
                         class="button-main-4">Earn Money Answering</button></a>
                   </div>
                 </div>
@@ -70,9 +70,9 @@
                    You are an expert? Earn money answering!</h1>
                   <p class="subtitle-index">Search by tags what questions you can answer and earn money.</p>
                   <div class="mt-3">
-                    <a {{#if user}} href="/questions/add" {{else}} href="/users/signin" {{/if}}><button
+                    <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
                         class="button-main-3">Get Answers</button></a>
-                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signin" {{/if}}><button
+                    <a {{#if user}} href="/questions/allquestions" {{else}} href="/users/signup" {{/if}}><button
                         class="button-main-4">Earn Money Answering</button></a>
                   </div>
                 </div>
