--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -13,6 +13,7 @@
         <a href ="/"><img src="/img/logoprice.png" class=" mx-auto display-block m-4 login-logo" alt=""> </a>
         <div class="card-body card-body-signup">
           <form action="/users/signup" method="POST">
+          <h2 style="font-family: Montserrat, sans-serif;"> Grand Opening - Discount offer: 20% off! </h2>
             <div class="mt-3">
               <input type="text" class="form-control" name="name" placeholder="Name" value="{{name}}" />
             </div>
