--- a/src/views/layouts/main-user.hbs
+++ b/src/views/layouts/main-user.hbs
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/img/iconlogoprice.png">
   <link rel="shortcut icon" href="/img/iconlogoprice.png">
+  <title>Get Answers from Experts Quickly | Earn Money Online Answering Questions</title>
 
   <!---Bootstrap 4 --->
 
@@ -118,20 +119,20 @@
   <script src="/js/timeline.js"></script>
 
 
-  <!-- JavaScript Libraries -->
-  <script src="/lib/jquery/jquery.min.js"></script>
+   <!-- JavaScript Libraries -->
+ <!--  <script src="/lib/jquery/jquery.min.js"></script> 
   <script src="/lib/jquery/jquery-migrate.min.js"></script>
-  <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script> 
   <script src="/lib/easing/easing.min.js"></script>
   <script src="/lib/superfish/hoverIntent.js"></script>
-  <script src="/lib/superfish/superfish.min.js"></script>
+  <script src="/lib/superfish/superfish.min.js"></script> -->
   <script src="/lib/wow/wow.min.js"></script>
-  <script src="/lib/waypoints/waypoints.min.js"></script>
+<!--  <script src="/lib/waypoints/waypoints.min.js"></script>
   <script src="/lib/counterup/counterup.min.js"></script>
   <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="/lib/isotope/isotope.pkgd.min.js"></script>
   <script src="/lib/lightbox/js/lightbox.min.js"></script>
-  <script src="/lib/touchSwipe/jquery.touchSwipe.min.js"></script>
+  <script src="/lib/touchSwipe/jquery.touchSwipe.min.js"></script> -->
   <!-- Contact Form JavaScript File -->
   <script src="/contactform/contactform.js"></script>
 
