--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/img/iconlogoprice.png">
   <link rel="shortcut icon" href="/img/iconlogoprice.png">
+  <title>Get Answers from Experts Quickly | Earn Money Online Answering Questions</title>
 
 
   <!---Bootstrap 4 --->
