--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,4 +1,3 @@
-
 <div class="row card border-card">
   <div class="banner-question u-section-2">
     <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">USER</h3>
@@ -10,10 +9,10 @@
     <div class="col-md-3 mx-auto">
       <div class="card mt-4 text-center ">
 
-        <a href ="/"><img src="/img/logoprice.png" class=" mx-auto display-block m-4 login-logo" alt=""> </a>
+        <a href="/"><img src="/img/logoprice.png" class=" mx-auto display-block m-4 login-logo" alt=""> </a>
         <div class="card-body card-body-signup">
           <form action="/users/signup" method="POST">
-          <h2 style="font-family: Montserrat, sans-serif;"> Grand Opening - Discount offer: 20% off! </h2>
+            <h2 style="font-family: Montserrat, sans-serif;"> Grand Opening - Discount offer: 20% off! </h2>
             <div class="mt-3">
               <input type="text" class="form-control" name="name" placeholder="Name" value="{{name}}" />
             </div>
@@ -29,6 +28,11 @@
             </div>
             <div class="mt-5 col-md-10 mx-auto">
               <button type="submit" class="btn btn-primary btn-block"> SignUp</button>
+            </div>
+            <div class="footer-login mt-4">
+              <div class="register-text-login">
+                Do you already have an account? <a href="/users/signin" class="link-primary">Sign In</a>
+              </div>
             </div>
           </form>
         </div>
