--- a/src/views/layouts/main-user.hbs
+++ b/src/views/layouts/main-user.hbs
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/img/iconlogoprice.png">
   <link rel="shortcut icon" href="/img/iconlogoprice.png">
-  <title>Get Answers from Experts Quickly | Earn Money Online Answering Questions</title>
 
   <!---Bootstrap 4 --->
 
@@ -20,10 +19,10 @@
 
   <!-- Libraries CSS Files -->
   <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="/lib/animate/animate.min.css" rel="stylesheet">
+ <!--  <link href="/lib/animate/animate.min.css" rel="stylesheet">
   <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+  <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">  
+  <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet"> -->
   <!-- <link href="lib/mdb/css/mdb-pro.min.css" rel="stylesheet"> -->
 
   <!-- Main Stylesheet File -->
@@ -121,11 +120,11 @@
 
    <!-- JavaScript Libraries -->
  <!--  <script src="/lib/jquery/jquery.min.js"></script> 
-  <script src="/lib/jquery/jquery-migrate.min.js"></script>
-  <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script> 
-  <script src="/lib/easing/easing.min.js"></script>
-  <script src="/lib/superfish/hoverIntent.js"></script>
-  <script src="/lib/superfish/superfish.min.js"></script> -->
+  <script src="/lib/jquery/jquery-migrate.min.js"></script> -->
+   <!--  <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>  -->
+ <!-- <script src="/lib/easing/easing.min.js"></script>
+   <script src="/lib/superfish/hoverIntent.js"></script> -->
+  <script src="/lib/superfish/superfish.min.js"></script> 
   <script src="/lib/wow/wow.min.js"></script>
 <!--  <script src="/lib/waypoints/waypoints.min.js"></script>
   <script src="/lib/counterup/counterup.min.js"></script>
